# HPStudies

./: CMakeLists.txt  Linkdef.h  ProcessG4HP.py  README.md  cleaning.sh  g4hp.cc  g4hp_job.sh  setup.sh
AnaHARP/: CreateMCFInv.C  CreateMCXSec.C  CreateMCXSec2.C  QElEvents.C  TestCreateMCXSec.C
InterMap/: LinkDef.h  Plotting.C  SBNFluxAna_dk2nu.C  utadk2nu.cc  utadk2nu.h  utadkmeta.cc  utadkmeta.h
ana/: CreateInvXS.C  CreateMult.C  CreateYields.C  ExampleOfUsingFunctions.C  Makefile  functions.cxx
include/: HPAnalysis.hh  HPConfig.hh  HPDetectorConstruction.hh  HPEventAction.hh  HPPrimaryGeneratorAction.hh  HPRunAction.hh  HPStackingAction.hh  HPTargets.hh  HPTrackInfo.hh  HPTrackingAction.hh  TrackInfo_t.hh  hptuple.hh
kaons/: kaonStudy.C  plotting.C
legacy/: setup_g4hp_cvmfs.sh
src/: HPAnalysis.cc  HPConfig.cc  HPDetectorConstruction.cc  HPEventAction.cc  HPPrimaryGeneratorAction.cc  HPRunAction.cc  HPStackingAction.cc  HPTrackInfo.cc  HPTrackingAction.cc  TrackInfo_t.cc  hptuple.cc
